--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
         </div>
     </div>
     
-  <script type="text/javascript"></script>
+  <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
